--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1>Hello World</h1>
+    <div>
+        <img src="https://media.istockphoto.com/id/1405586380/vector/hello-space-print-with-cute-planet-boy-astronaut.jpg?s=612x612&w=is&k=20&c=UbhDUYBM-JXpqQXKfaUMlXConFpMaEI4XvlCIJYEE4E="
+            alt="Hello from space" style="height: 300px; width: 300px;">
+    </div>
     <p>This is the first file in my new Git Repo</p>
     <p>This is new line in our file</p>
 </body>
