--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello World</h1>
     <p>This is the first file in my new Git Repo</p>
+    <p>This line is here to show how merging works</p>
     <p>This is new line in our file</p>
 </body>
 
