--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -16,6 +16,10 @@
     </div>
     <p>This is the first file in my new Git Repo</p>
     <p>This is new line in our file</p>
+    <div>
+        <img src="https://m.media-amazon.com/images/I/61MPLNqvaYL._AC_UF1000,1000_QL80_.jpg"
+            alt="hello from space image" style="height: 300px; width: 300px;">
+    </div>
 </body>
 
 </html>
