--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -21,6 +21,9 @@
         <img src="https://m.media-amazon.com/images/I/61MPLNqvaYL._AC_UF1000,1000_QL80_.jpg"
             alt="hello from space image" style="height: 300px; width: 300px;">
     </div>
+    <p>From our Earth-bound perspective, outer space is most often thought to begin about 62 miles (100 kilometers)
+        above sea level at what is known as the Kármán line. This is an imaginary boundary at an altitude where there is
+        no appreciable air to breathe or scatter light.</p>
 </body>
 
 </html>
